--- a/index.html
+++ b/index.html
@@ -3,102 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock Paper Scissors</title>
+        <script src="script.js" defer></script>
     </head>
     <body>
         <div class="pageTitle"><h1>Rock Paper Scissors!</h1></div>
-        <div class="instructions">Type R for rock, P for paper, S for Scissors</div>
+        <div class="instructions">Make your choice, first to three wins</div>
+        <button class="rbtn">Rock</button>
+        <button class="pbtn">Paper</button>
+        <button clasee="sbtn">Scissors</button>
         <div class="computerSelection"></div>
         <div class="winLossDraw"></div>
     </body>
     <script>
-        function computerMove() {
-            let x = Math.floor((Math.random() * 3) + 1);
-            switch (x) {
-                case 1:
-                    return "R";
-                    break;
-                case 2:
-                    return "P";
-                    break;
-                case 3: 
-                    return "S";
-                    break;
-            }
-        }
 
-        function getPlayerinput () {
-
-
-            let pMove;
-            let validinput = false;
-            while (!validinput) {
-                pMove = prompt("R for Rock, P for paper, S for scissors");
-                pMove = pMove.toUpperCase();
-                if (pMove === "R" || pMove === "P" || pMove === "S") {
-                    validinput = true;
-                }   else {alert("Invalid input");}
-            }
-            return pMove;
-        }
-
-        function round (cMove, pMove) {
-
-            cMove = computerMove();
-            pMove = getPlayerinput();
-            
-            if (pMove === "R") {
-                if (cMove ==="R") {
-                    return "Draw! Two Rocks";
-                } else if (cMove ==="P") {
-                    return "Lose! Paper beats Rock";
-                } else {
-                    return "Win! Rock beats Scissors";
-                }
-            } else if (pMove === "P") {
-                if (cMove ==="R") {
-                    return "Win! Paper beats Rock";
-                } else if (cMove ==="P") {
-                    return "Draw! Two Papers";
-                } else {
-                    return "Lose! Scissors beats Paper";
-                }
-            } else {
-                if (cMove ==="R") {
-                    return "Lose! Rock beats Scissors";
-                } else if (cMove ==="P") {
-                    return "Win! Scissors beats Paper";
-                } else {
-                    return "Draw! Two pairs of Scissors";
-                }
-            }
-        }
-
-        function game() {
-
-            let pScore = 0;
-            let cScore = 0;
-
-            while (pScore < 3 && cScore <3) {
-
-                let resultStatement = round();
-                let result = resultStatement.charAt(0);
-                alert(resultStatement);
-                if (result ==="W") {++pScore;}
-                else if (result ==="L") {++cScore;} 
-
-                if (pScore >= 3) {
-                    alert("You Win!");
-                } else if (cScore >=3) {
-                    alert("You Lose!");
-                } else {
-                    alert("Player score is " + pScore + ", Computer score is " + cScore);
-                }
-            }
-
-        }
-
-        game();
-
-        
     </script>
 </html>
