Working button style RPS

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <div class="instructions">Make your choice, first to three wins</div>
         <button class="rbtn">Rock</button>
         <button class="pbtn">Paper</button>
-        <button clasee="sbtn">Scissors</button>
-        <div class="computerSelection"></div>
-        <div class="winLossDraw"></div>
+        <button class="sbtn">Scissors</button>
+        <div class="lastResult"></div>
+        <div class="currentScore"></div>
     </body>
     <script>
 
